# ai_agent_template

./: .gitignore  OrchestratorAgent.py  PlannerAgent.py  README.md  main.py  pyproject.toml  responses.txt  text.txt
MCP/: client.py  server.py
agents/: OrchestratorAgent.py  PlannerAgent.py
utils/: Executor.py  open_plan.ipynb  prompts.py  responses.ipynb  schemas.py
utils/.ipynb_checkpoints/: responses-checkpoint.ipynb
utils/debugging/: execute_plan.ipynb  generate_plan.ipynb
